--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,32 @@ services:
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - PYTHONPATH=/app
     volumes:
-      - ./backend:/app
+      - ./src:/app
     ports:
       - "8000:8000"
     depends_on:
       db:
         condition: service_healthy
       redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    networks:
+      - game-network
+  nginx:
+    image: nginx:alpine
+    container_name: cockroach-nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      backend:
         condition: service_healthy
     networks:
       - game-network
@@ -54,20 +73,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - game-network
-
-  nginx:
-    image: nginx:alpine
-    container_name: cockroach-nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certs:/etc/ssl/certs:ro
-    depends_on:
-      - backend
     networks:
       - game-network
 
