--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.110.0
-uvicorn==0.29.0
+uvicorn[standard]==0.29.0
+websockets==12.0
 sqlalchemy==2.0.28
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
