--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      redis:
-        condition: service_healthy
+#      redis:
+#        condition: service_healthy
     networks:
       - game-network
     healthcheck:
@@ -31,18 +31,18 @@ services:
       retries: 5
       start_period: 30s
 
-  nginx:
-    image: nginx:alpine
-    container_name: cockroach-nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - backend
-    networks:
-      - game-network
+#  nginx:
+#    image: nginx:alpine
+#    container_name: cockroach-nginx
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#    volumes:
+#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+#    depends_on:
+#      - backend
+#    networks:
+#      - game-network
 
   db:
     image: postgres:15  # Updated from 9.6 to 15
@@ -63,25 +63,25 @@ services:
       timeout: 5s
       retries: 10
 
-  redis:
-    image: redis:7-alpine
-    container_name: cockroach-redis
-    command: redis-server --requirepass ${REDIS_PASSWORD}  # Add if using password
-    env_file:
-      - .env
-    environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}  # Add if using password
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis-data:/data
-    networks:
-      - game-network
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
+#  redis:
+#    image: redis:7-alpine
+#    container_name: cockroach-redis
+#    command: redis-server --requirepass ${REDIS_PASSWORD}  # Add if using password
+#    env_file:
+#      - .env
+#    environment:
+#      - REDIS_PASSWORD=${REDIS_PASSWORD}  # Add if using password
+#    ports:
+#      - "6379:6379"
+#    volumes:
+#      - redis-data:/data
+#    networks:
+#      - game-network
+#    healthcheck:
+#      test: ["CMD", "redis-cli", "ping"]
+#      interval: 5s
+#      timeout: 5s
+#      retries: 10
 
 volumes:
   postgres-data:
