--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,46 +8,49 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Используем DNS-резолвер Docker
-    resolver 127.0.0.11 valid=10s;
+    resolver 127.0.0.11 valid=10s;  # Для Docker DNS
 
-    # Логи
+    # Логирование (настройте путь)
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    # Настройки прокси
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    # Основные настройки
+    sendfile on;
+    keepalive_timeout 65;
+    gzip on;  # Включите сжатие
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
 
     server {
         listen 80;
-        server_name localhost;
+        server_name your-domain.com;  # Замените на домен
 
-        # Статика фронтенда
+        # Статика фронтенда (после сборки)
         location / {
             root /usr/share/nginx/html;
-            index index.html index.htm;
+            index index.html;
             try_files $uri $uri/ /index.html;
         }
 
-        # API бэкенда
+        # API
         location /api {
-            # Используем переменную с резолвингом
             set $backend backend:8000;
             proxy_pass http://$backend;
             proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # WebSocket
+        # WebSockets
         location /ws {
-            # Используем переменную с резолвингом
             set $backend backend:8000;
             proxy_pass http://$backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
         }
     }
 }
