--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,30 +47,18 @@ services:
   db:
     image: postgres:15
     container_name: cockroach-db
-    env_file:
-      - .env
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    env_file: .env
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
       - game-network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
 
   redis:
     image: redis:7-alpine
     container_name: cockroach-redis
-    command: redis-server --requirepass ${REDIS_PASSWORD}  # Add if using password
+    command: redis-server
     env_file:
       - .env
-    environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}  # Add if using password
     ports:
       - "6379:6379"
     volumes:
