--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-fastapi
-uvicorn
 sqlalchemy
 psycopg2-binary
 python-dotenv
 redis
 pydantic-settings
 pydantic
+fastapi
+gunicorn
+uvicorn[standard]
+websockets
